# aquatic

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml
aquatic/: Cargo.toml
aquatic/src/: common.rs  handler.rs  main.rs  network.rs  types.rs
aquatic/src/lib/: common.rs  config.rs  handler.rs  handlers.rs  lib.rs  network.rs  tasks.rs
aquatic_bench/: Cargo.toml
aquatic_bench/src/: lib.rs
aquatic_cli_helpers/: Cargo.toml
aquatic_cli_helpers/src/: lib.rs
aquatic_common/: Cargo.toml
aquatic_common/src/: access_list.rs  cli.rs  cpu_pinning.rs  full_scrape.rs  lib.rs  privileges.rs  rustls_config.rs
aquatic_common_tcp/: Cargo.toml
aquatic_common_tcp/src/: common.rs  config.rs  lib.rs
aquatic_common_tcp/src/network/: mod.rs  utils.rs
aquatic_http/: Cargo.toml
aquatic_http/benches/: bench_announce_response_to_bytes.rs  bench_request_from_path.rs
aquatic_http/src/: common.rs  config.rs  lib.rs  main.rs
aquatic_http/src/lib/: common.rs  config.rs  handler.rs  handlers.rs  lib.rs  network.rs  tasks.rs
aquatic_http/src/lib/common/: handlers.rs  mod.rs
aquatic_http/src/lib/glommio/: common.rs  handlers.rs  mod.rs  network.rs
aquatic_http/src/lib/mio/: common.rs  handler.rs  mod.rs  tasks.rs
aquatic_http/src/lib/network/: connection.rs  mod.rs  stream.rs  utils.rs
aquatic_http/src/lib/protocol/: common.rs  mod.rs  request.rs  response.rs  serde_helpers.rs  utils.rs
aquatic_http/src/workers/: mod.rs  request.rs  socket.rs  swarm.rs
aquatic_http_load_test/: Cargo.toml
aquatic_http_load_test/src/: common.rs  config.rs  handler.rs  main.rs  network.rs  utils.rs
aquatic_http_private/: Cargo.toml  README.md
aquatic_http_private/src/: common.rs  config.rs  lib.rs  main.rs
aquatic_http_private/src/workers/: common.rs  mod.rs  request.rs
aquatic_http_private/src/workers/request/: common.rs  mod.rs
aquatic_http_private/src/workers/socket/: db.rs  mod.rs  routes.rs  tls.rs
aquatic_http_private/src/workers/swarm/: common.rs  mod.rs
aquatic_http_protocol/: Cargo.toml
aquatic_http_protocol/benches/: bench_announce_response_to_bytes.rs  bench_request_from_bytes.rs  bench_request_from_path.rs
aquatic_http_protocol/src/: common.rs  request.rs  response.rs  utils.rs
aquatic_load_test/: Cargo.toml
aquatic_load_test/src/: handler.rs  main.rs  utils.rs
aquatic_peer_id/: Cargo.toml
aquatic_peer_id/src/: lib.rs
aquatic_toml_config/: Cargo.toml
aquatic_toml_config/src/: lib.rs
aquatic_toml_config_derive/: Cargo.toml
aquatic_udp/: Cargo.toml
aquatic_udp/src/: common.rs  config.rs  lib.rs  main.rs
aquatic_udp/src/lib/: common.rs  config.rs  handlers.rs  lib.rs  network.rs  network_mio.rs  network_uring.rs  tasks.rs
aquatic_udp/src/lib/common/: announce.rs  handlers.rs  mod.rs  network.rs
aquatic_udp/src/lib/glommio/: common.rs  handlers.rs  mod.rs  network.rs
aquatic_udp/src/lib/handlers/: announce.rs  connect.rs  mod.rs  scrape.rs
aquatic_udp/src/lib/mio/: common.rs  handlers.rs  mod.rs  network.rs  network_uring.rs  tasks.rs
aquatic_udp/src/lib/network/: mio.rs  mod.rs  rio.rs
aquatic_udp/src/lib/other/: common.rs  handlers.rs  mod.rs  network_mio.rs  network_uring.rs
aquatic_udp/src/lib/workers/: mod.rs  request.rs  socket.rs  statistics.rs
aquatic_udp/src/workers/: request.rs  socket.rs  statistics.rs
aquatic_udp/src/workers/request/: mod.rs  storage.rs
aquatic_udp/src/workers/socket/: buf_ring.rs  common.rs  mio.rs  mod.rs  requests.rs  responses.rs  storage.rs  uring.rs  validator.rs
aquatic_udp/templates/: statistics.css  statistics.html
aquatic_udp/tests/: access_list.rs  integration.rs  invalid_connection_id.rs
aquatic_udp_bench/: Cargo.toml
aquatic_udp_bench/src/: announce.rs  common.rs  config.rs  connect.rs  main.rs  scrape.rs
aquatic_udp_load_test/: Cargo.toml
aquatic_udp_load_test/src/: common.rs  config.rs  handler.rs  main.rs  network.rs  utils.rs
aquatic_udp_load_test/src/worker/: mod.rs  request_gen.rs
aquatic_udp_protocol/: Cargo.toml
aquatic_udp_protocol/src/: common.rs  lib.rs  request.rs  response.rs
aquatic_udp_protocol/src/converters/: requests.rs  responses.rs
aquatic_udp_protocol/src/types/: request.rs  response.rs
aquatic_ws/: Cargo.toml
aquatic_ws/src/: common.rs  config.rs  lib.rs  main.rs  tasks.rs
aquatic_ws/src/common/: handlers.rs  mod.rs
aquatic_ws/src/glommio/: mod.rs  request.rs  socket.rs
aquatic_ws/src/lib/: common.rs  config.rs  handler.rs  handlers.rs  lib.rs  network.rs  protocol.rs  tasks.rs
aquatic_ws/src/mio/: mod.rs
aquatic_ws/src/workers/: request.rs  socket.rs  swarm.rs
aquatic_ws_load_test/: Cargo.toml
aquatic_ws_load_test/src/: common.rs  config.rs  main.rs  network.rs  utils.rs
aquatic_ws_protocol/: Cargo.toml
aquatic_ws_protocol/benches/: bench_deserialize_announce_request.rs
aquatic_ws_protocol/src/: common.rs  lib.rs  serde_helpers.rs
aquatic_ws_protocol/src/request/: announce.rs  mod.rs
aquatic_ws_protocol/src/response/: mod.rs  offer.rs  scrape.rs
bittorrent_udp/: Cargo.toml
crates/bencher/: Cargo.toml  README.md
crates/bencher/src/: common.rs  html.rs  main.rs  run.rs  set.rs
crates/common/: Cargo.toml
crates/common/src/: access_list.rs  cli.rs  cpu_pinning.rs  lib.rs  privileges.rs  rustls_config.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: common.rs  config.rs  lib.rs  main.rs
crates/http_load_test/: Cargo.toml  README.md
crates/http_load_test/src/: common.rs  config.rs  main.rs  network.rs  utils.rs
crates/http_protocol/: Cargo.toml  README.md
crates/http_protocol/benches/: bench_announce_response_to_bytes.rs  bench_request_from_bytes.rs
crates/http_protocol/src/: common.rs  lib.rs  request.rs  response.rs  utils.rs
crates/load_tester/: Cargo.toml  README.md
crates/load_tester/src/: main.rs  run.rs  set.rs
crates/peer_id/: Cargo.toml  README.md
crates/peer_id/src/: lib.rs
crates/toml_config_derive/: Cargo.toml
crates/toml_config_derive/src/: lib.rs
toml_config/: Cargo.toml
toml_config/src/: lib.rs
toml_config/tests/: test.rs
(+202 files in other folders)
