[workspace]

members = [ 
    "aquatic",
    "aquatic_cli_helpers",
    "aquatic_common",
    "aquatic_http",
    "aquatic_http_load_test",
    "aquatic_http_private",
    "aquatic_http_protocol",
    "aquatic_toml_config",
    "aquatic_toml_config_derive",
    "aquatic_udp",
    "aquatic_udp_bench",
    "aquatic_udp_load_test",
    "aquatic_udp_protocol",
    "aquatic_ws",
    "aquatic_ws_load_test",
    "aquatic_ws_protocol",
]

[patch.crates-io]
membarrier = { git = "https://github.com/glommer/membarrier-rs.git", branch = "issue-22" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
inherits = "release-debug"

[profile.bench]
inherits = "release-debug"

[profile.release-debug]
inherits = "release"
debug = true
