[workspace]
members = [ 
    "aquatic",
    "aquatic_common",
    "aquatic_http",
    "aquatic_http_load_test",
    "aquatic_http_private",
    "aquatic_http_protocol",
    "aquatic_toml_config",
    "aquatic_toml_config_derive",
    "aquatic_udp",
    "aquatic_udp_bench",
    "aquatic_udp_load_test",
    "aquatic_udp_protocol",
    "aquatic_ws",
    "aquatic_ws_load_test",
    "aquatic_ws_protocol",
]

[workspace.package]
version = "0.8.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
readme = "./README.md"
rust-version = "1.64"

[workspace.dependencies]
aquatic_common = { version = "0.8.0", path = "./aquatic_common" }
aquatic_http_protocol = { version = "0.8.0", path = "./aquatic_http_protocol" }
aquatic_http = { version = "0.8.0", path = "./aquatic_http" }
aquatic_toml_config = { version = "0.8.0", path = "./aquatic_toml_config" }
aquatic_toml_config_derive = { version = "0.8.0", path = "./aquatic_toml_config_derive" }
aquatic_udp_protocol = { version = "0.8.0", path = "./aquatic_udp_protocol" }
aquatic_udp = { version = "0.8.0", path = "./aquatic_udp" }
aquatic_ws_protocol = { version = "0.8.0", path = "./aquatic_ws_protocol" }
aquatic_ws = { version = "0.8.0", path = "./aquatic_ws" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
inherits = "release-debug"

[profile.bench]
inherits = "release-debug"

[profile.release-debug]
inherits = "release"
debug = true

[profile.test-fast]
inherits = "release"
lto = false
