[workspace]
members = [ 
    "crates/bencher",
    "crates/combined_binary",
    "crates/common",
    "crates/http",
    "crates/http_load_test",
    "crates/http_protocol",
    "crates/peer_id",
    "crates/toml_config",
    "crates/toml_config_derive",
    "crates/udp",
    "crates/udp_load_test",
    "crates/udp_protocol",
    "crates/ws",
    "crates/ws_load_test",
    "crates/ws_protocol",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
readme = "./README.md"
rust-version = "1.64"

[workspace.dependencies]
aquatic_common = { version = "0.9.0", path = "./crates/common" }
aquatic_http_protocol = { version = "0.9.0", path = "./crates/http_protocol" }
aquatic_http = { version = "0.9.0", path = "./crates/http" }
aquatic_peer_id = { version = "0.9.0", path = "./crates/peer_id" }
aquatic_toml_config = { version = "0.9.0", path = "./crates/toml_config" }
aquatic_toml_config_derive = { version = "0.9.0", path = "./crates/toml_config_derive" }
aquatic_udp_protocol = { version = "0.9.0", path = "./crates/udp_protocol" }
aquatic_udp = { version = "0.9.0", path = "./crates/udp" }
aquatic_udp_load_test = { version = "0.9.0", path = "./crates/udp_load_test" }
aquatic_ws_protocol = { version = "0.9.0", path = "./crates/ws_protocol" }
aquatic_ws = { version = "0.9.0", path = "./crates/ws" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
inherits = "release-debug"

[profile.bench]
inherits = "release-debug"

[profile.release-debug]
inherits = "release"
debug = true

[profile.test-fast]
inherits = "release"
lto = false
