[package]
name = "aquatic"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Blazingly fast, multi-threaded BitTorrent tracker (UDP, HTTP, WebTorrent)"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["bittorrent", "torrent", "webtorrent"]

[[bin]]
name = "aquatic"

[dependencies]
aquatic_cli_helpers = "0.1.0"
aquatic_http = "0.1.0"
aquatic_udp = "0.1.0"
aquatic_ws = "0.1.0"
mimalloc = { version = "0.1", default-features = false }