[package]
name = "aquatic"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Blazingly fast, multi-threaded BitTorrent tracker (UDP, HTTP, WebTorrent)"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["bittorrent", "torrent", "webtorrent"]
readme = "../README.md"

[[bin]]
name = "aquatic"

[dependencies]
aquatic_common = { version = "0.2.0", path = "../aquatic_common" }
aquatic_http = { version = "0.2.0", path = "../aquatic_http" }
aquatic_udp = { version = "0.2.0", path = "../aquatic_udp" }
aquatic_ws = { version = "0.2.0", path = "../aquatic_ws" }
mimalloc = { version = "0.1", default-features = false }
