[package]
name = "aquatic_common"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "aquatic BitTorrent tracker common code"
repository = "https://github.com/greatest-ape/aquatic"
readme = "../README.md"

[lib]
name = "aquatic_common"

[features]
rustls = ["dep:rustls", "rustls-pemfile"]

[dependencies]
aquatic_toml_config = { version = "0.2.0", path = "../aquatic_toml_config" }

ahash = "0.7"
anyhow = "1"
arc-swap = "1"
duplicate = "0.4"
git-testament = "0.2"
hashbrown = "0.12"
hex = "0.4"
indexmap-amortized = "1"
libc = "0.2"
log = "0.4"
privdrop = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
simple_logger = { version = "2", features = ["stderr"] }
toml = "0.5"

# Optional
glommio = { version = "0.7", optional = true }
hwloc = { version = "0.5", optional = true }
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "0.3", optional = true }
