[package]
name = "aquatic_common"
description = "aquatic BitTorrent tracker common code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_common"

[features]
rustls = ["dep:rustls", "rustls-pemfile"]

[dependencies]
aquatic_toml_config.workspace = true

ahash = "0.8"
anyhow = "1"
arc-swap = "1"
duplicate = "0.4"
git-testament = "0.2"
hashbrown = "0.13"
hex = "0.4"
indexmap = "1"
libc = "0.2"
log = "0.4"
privdrop = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
simple_logger = { version = "4", features = ["stderr"] }
toml = "0.5"

# Optional
glommio = { version = "0.8", optional = true }
hwloc = { version = "0.5", optional = true }
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "1", optional = true }
