[package]
name = "aquatic_common"
description = "aquatic BitTorrent tracker common code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_common"

[features]
rustls = ["dep:rustls", "rustls-pemfile"]
full-scrapes = ["axum", "flume", "tokio", "tower-http"]

[dependencies]
aquatic_toml_config.workspace = true

ahash = "0.8"
anyhow = "1"
arc-swap = "1"
duplicate = "1"
git-testament = "0.2"
hashbrown = "0.13"
hex = { version = "0.4", features = ["serde"] }
indexmap = "1"
libc = "0.2"
log = "0.4"
privdrop = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
simple_logger = { version = "4", features = ["stderr"] }
toml = "0.5"

# glommio
glommio = { version = "0.8", optional = true }

# hwloc
hwloc = { version = "0.5", optional = true }

# rustls
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1", optional = true }

# full-scrape
axum = { version = "0.6", optional = true }
flume = { version = "0.10", optional = true }
tokio = { version = "1", features = ["rt", "net"], optional = true }
tower-http = { version = "0.4", features = ["compression-deflate"], optional = true }