[package]
name = "aquatic_http"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Blazingly fast, multi-threaded HTTP BitTorrent tracker"
repository = "https://github.com/greatest-ape/aquatic"

[lib]
name = "aquatic_http"

[[bin]]
name = "aquatic_http"

[features]
cpu-pinning = ["aquatic_common/cpu-pinning"]

[dependencies]
aquatic_cli_helpers = "0.1.0"
aquatic_common = "0.1.0"
aquatic_http_protocol = "0.1.0"
aquatic_toml_config = "0.1.0"

anyhow = "1"
cfg-if = "1"
either = "1"
futures-lite = "1"
futures-rustls = "0.22"
glommio = "0.7"
itoa = "1"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"
privdrop = "0.5"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
rustls-pemfile = "0.3"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3" }
slab = "0.4"
smartstring = "1"
socket2 = { version = "0.4", features = ["all"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
