[package]
name = "aquatic_http"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Blazingly fast, multi-threaded HTTP BitTorrent tracker"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["http", "server", "peer-to-peer", "torrent", "bittorrent"]
readme = "../README.md"

[lib]
name = "aquatic_http"

[[bin]]
name = "aquatic_http"

[dependencies]
aquatic_common = { version = "0.2.0", path = "../aquatic_common", features = ["rustls", "glommio"] }
aquatic_http_protocol = { version = "0.2.0", path = "../aquatic_http_protocol" }
aquatic_toml_config = { version = "0.2.0", path = "../aquatic_toml_config" }

anyhow = "1"
cfg-if = "1"
either = "1"
futures-lite = "1"
futures-rustls = "0.22"
glommio = "0.7"
itoa = "1"
libc = "0.2"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"
privdrop = "0.5"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
rustls-pemfile = "0.3"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3" }
slab = "0.4"
smartstring = "1"
socket2 = { version = "0.4", features = ["all"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
