[package]
name = "aquatic_http"
description = "High-performance open BitTorrent tracker (HTTP over TLS)"
keywords = ["http", "server", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_http"

[[bin]]
name = "aquatic_http"

[dependencies]
aquatic_common = { workspace = true, features = ["rustls", "glommio"] }
aquatic_http_protocol.workspace = true
aquatic_toml_config.workspace = true

anyhow = "1"
cfg-if = "1"
either = "1"
futures = "0.3"
futures-lite = "1"
futures-rustls = "0.22"
glommio = "0.7"
itoa = "1"
libc = "0.2"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"
privdrop = "0.5"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3" }
slab = "0.4"
smartstring = "1"
socket2 = { version = "0.4", features = ["all"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
