[package]
name = "aquatic_http_load_test"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "BitTorrent (HTTP over TLS) load tester"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["http", "benchmark", "peer-to-peer", "torrent", "bittorrent"]
readme = "../README.md"

[[bin]]
name = "aquatic_http_load_test"

[dependencies]
aquatic_common = { version = "0.2.0", path = "../aquatic_common", features = ["with-glommio"] }
aquatic_http_protocol = { version = "0.2.0", path = "../aquatic_http_protocol" }
aquatic_toml_config = { version = "0.2.0", path = "../aquatic_toml_config" }

anyhow = "1"
futures-lite = "1"
futures-rustls = "0.22"
hashbrown = "0.12"
glommio = "0.7"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
