[package]
name = "aquatic_http_protocol"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
description = "HTTP BitTorrent tracker protocol"
keywords = ["http", "protocol", "peer-to-peer", "torrent", "bittorrent"]
readme = "../README.md"

[lib]
name = "aquatic_http_protocol"

[[bench]]
name = "bench_request_from_bytes"
path = "benches/bench_request_from_bytes.rs"
harness = false

[[bench]]
name = "bench_announce_response_to_bytes"
path = "benches/bench_announce_response_to_bytes.rs"
harness = false

[dependencies]
anyhow = "1"
hex = { version = "0.4", default-features = false }
httparse = "1"
itoa = "1"
log = "0.4"
memchr = "2"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
smartstring = "1"
urlencoding = "2"

[dev-dependencies]
bendy = { version = "0.3", features = ["std", "serde"] }
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
