[package]
name = "aquatic_http_protocol"
description = "HTTP BitTorrent tracker protocol"
keywords = ["http", "protocol", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_http_protocol"

[[bench]]
name = "bench_request_from_bytes"
path = "benches/bench_request_from_bytes.rs"
harness = false

[[bench]]
name = "bench_announce_response_to_bytes"
path = "benches/bench_announce_response_to_bytes.rs"
harness = false

[dependencies]
anyhow = "1"
axum = { version = "0.5", optional = true, default-features = false }
hex = { version = "0.4", default-features = false }
httparse = "1"
itoa = "1"
log = "0.4"
memchr = "2"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
smartstring = "1"
urlencoding = "2"

[dev-dependencies]
bendy = { version = "0.4.0-beta.2", features = ["std", "serde"] }
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
