[package]
name = "aquatic_peer_id"
description = "BitTorrent peer ID handling"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_peer_id"

[dependencies]
compact_str = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }