[package]
name = "aquatic_toml_config"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "WebTorrent tracker protocol"
repository = "https://github.com/greatest-ape/aquatic"
exclude = ["target"]

[lib]
name = "aquatic_toml_config"

[dependencies]
toml = "0.5"
aquatic_toml_config_derive = { path = "../aquatic_toml_config_derive" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
quickcheck = "1"
quickcheck_macros = "1"
