[package]
name = "aquatic_udp"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Blazingly fast, multi-threaded UDP BitTorrent tracker"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["udp", "server", "peer-to-peer", "torrent", "bittorrent"]
readme = "../README.md"

[lib]
name = "aquatic_udp"

[[bin]]
name = "aquatic_udp"

[features]
cpu-pinning = ["aquatic_common/cpu-pinning"]

[dependencies]
aquatic_cli_helpers = "0.1.0"
aquatic_common = "0.1.0"
aquatic_toml_config = "0.1.0"
aquatic_udp_protocol = "0.1.0"

anyhow = "1"
cfg-if = "1"
crossbeam-channel = "0.5"
hex = "0.4"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
mio = { version = "0.8", features = ["net", "os-poll"] }
num-format = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3" }
slab = "0.4"
socket2 = { version = "0.4", features = ["all"] }
time = { version = "0.3", features = ["formatting"] }
tinytemplate = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
