[package]
name = "aquatic_udp"
description = "High-performance open UDP BitTorrent tracker"
keywords = ["udp", "server", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_udp"

[[bin]]
name = "aquatic_udp"

[features]
cpu-pinning = ["aquatic_common/hwloc"]

[dependencies]
aquatic_common.workspace = true
aquatic_toml_config.workspace = true
aquatic_udp_protocol.workspace = true

anyhow = "1"
blake3 = "1"
cfg-if = "1"
constant_time_eq = "0.2"
crossbeam-channel = "0.5"
getrandom = "0.2"
hashbrown = { version = "0.13", default-features = false }
hex = "0.4"
libc = "0.2"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
mio = { version = "0.8", features = ["net", "os-poll"] }
num-format = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3" }
slab = "0.4"
socket2 = { version = "0.4", features = ["all"] }
time = { version = "0.3", features = ["formatting"] }
tinytemplate = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
