[package]
name = "aquatic_udp_bench"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
readme = "../README.md"

[[bin]]
name = "aquatic_udp_bench"

[dependencies]
aquatic_cli_helpers = "0.2.0"
aquatic_common = "0.2.0"
aquatic_toml_config = "0.2.0"
aquatic_udp = "0.2.0"
aquatic_udp_protocol = "0.2.0"

anyhow = "1"
crossbeam-channel = "0.5"
indicatif = "0.16"
mimalloc = { version = "0.1", default-features = false }
num-format = "0.4"
rand_distr = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
