[package]
name = "aquatic_udp_bench"
version = "0.2.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
readme = "../README.md"

[[bin]]
name = "aquatic_udp_bench"

[dependencies]
aquatic_common = { version = "0.2.0", path = "../aquatic_common" }
aquatic_toml_config = { version = "0.2.0", path = "../aquatic_toml_config" }
aquatic_udp = { version = "0.2.0", path = "../aquatic_udp" }
aquatic_udp_protocol = { version = "0.2.0", path = "../aquatic_udp_protocol" }

anyhow = "1"
crossbeam-channel = "0.5"
indicatif = "0.16"
mimalloc = { version = "0.1", default-features = false }
num-format = "0.4"
rand_distr = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
