[package]
name = "aquatic_udp_load_test"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"

[[bin]]
name = "aquatic_udp_load_test"

[features]
cpu-pinning = ["aquatic_common/cpu-pinning"]

[dependencies]
anyhow = "1"
aquatic_cli_helpers = "0.1.0"
aquatic_common = "0.1.0"
aquatic_udp_protocol = "0.1.0"
hashbrown = "0.12"
mimalloc = { version = "0.1", default-features = false }
mio = { version = "0.8", features = ["net", "os-poll"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.4", features = ["all"] }
aquatic_toml_config = "0.1.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
