[package]
name = "aquatic_udp_load_test"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["udp", "benchmark", "peer-to-peer", "torrent", "bittorrent"]
readme = "../README.md"

[[bin]]
name = "aquatic_udp_load_test"

[features]
cpu-pinning = ["aquatic_common/cpu-pinning"]

[dependencies]
aquatic_cli_helpers = "0.1.0"
aquatic_common = "0.1.0"
aquatic_toml_config = "0.1.0"
aquatic_udp_protocol = "0.1.0"

anyhow = "1"
hashbrown = "0.12"
mimalloc = { version = "0.1", default-features = false }
mio = { version = "0.8", features = ["net", "os-poll"] }
rand_distr = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.4", features = ["all"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
