[package]
name = "aquatic_udp_protocol"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "UDP BitTorrent tracker protocol"
repository = "https://github.com/greatest-ape/aquatic"

[dependencies]
byteorder = "1"
either = "1"
zerocopy = "0.6"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
