[package]
name = "aquatic_udp_protocol"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "UDP BitTorrent tracker protocol"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["udp", "protocol", "peer-to-peer", "torrent", "bittorrent"]

[dependencies]
byteorder = "1"
either = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
