[package]
name = "aquatic_udp_protocol"
description = "UDP BitTorrent tracker protocol"
keywords = ["udp", "protocol", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
byteorder = "1"
either = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
